tests/ui/attributes/optimize.stderr
error: `#[optimize]` attribute cannot be used on structs
  --> $DIR/optimize.rs:8:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[optimize]` can only be applied to functions

error: `#[optimize]` attribute cannot be used on expressions
  --> $DIR/optimize.rs:12:5
   |
LL |     #[optimize(speed)]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[optimize]` can only be applied to functions

error: `#[optimize]` attribute cannot be used on modules
  --> $DIR/optimize.rs:21:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[optimize]` can only be applied to functions

error: `#[optimize]` attribute cannot be used on inherent impl blocks
  --> $DIR/optimize.rs:24:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[optimize]` can only be applied to functions

error: `#[optimize]` attribute cannot be used on required trait methods
  --> $DIR/optimize.rs:45:5
   |
LL |     #[optimize(speed)]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[optimize]` can be applied to closures, functions, inherent methods, provided trait methods, and trait methods in impl blocks

error: multiple `optimize` attributes
  --> $DIR/optimize.rs:59:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/optimize.rs:58:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^

error: multiple `optimize` attributes
  --> $DIR/optimize.rs:63:1
   |
LL | #[optimize(size)]
   | ^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/optimize.rs:62:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

